// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Numeric input widget styles differently on mobile: mobile render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            5008 \\div 4 =
          </span>
          <span />
        </span>
         
        <div
          class="perseus-widget-container widget-inline-block"
        >
          <div>
            <div
              aria-label="Math input box Tap with one or two fingers to open keyboard"
              role="textbox"
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: inline-block; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; vertical-align: middle; max-inline-size: 128px;"
            >
              <div
                class="keypad-input"
                tabindex="0"
              >
                <div
                  class="mq-editable-field mq-math-mode"
                  style="min-height: 44px; min-width: 64px; max-width: 128px; box-sizing: border-box; position: relative; border-style: solid; border-radius: 4px; border-width: 1px;"
                >
                  <span
                    class="mq-textarea"
                  >
                    <span
                      aria-label="Math Input:"
                    />
                  </span>
                  <span
                    aria-hidden="true"
                    class="mq-root-block mq-empty"
                    style="padding: 10px 13px 8px 13px; font-size: 18pt;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`numeric-input widget Should render predictably: after interaction 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            5008 \\div 4 =
          </span>
          <span />
        </span>
         
        <div
          class="perseus-widget-container widget-inline-block"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-label="Your answer:"
            aria-required="false"
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="perseus-input perseus-focused input-with-examples is-focused"
            data-style-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border);"
            data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
            data-style-focus-visible-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner);"
            data-style-placeholder="color: var(--wb-semanticColor-input-default-placeholder);"
            data-testid="input-with-examples"
            id=":r6:"
            style="width: 8rem; height: 3.2rem; border-radius: 0.3rem; box-sizing: border-box; padding-inline: var(--wb-c-form-field-layout-paddingInline); padding-block: var(--wb-c-form-field-layout-paddingBlock); margin: 0px; display: inline-block; font-family: Symbola, "Times New Roman", serif; font-size: 1.8rem; font-weight: var(--wb-font-weight-medium); line-height: 1.8rem; background: var(--wb-semanticColor-input-default-background); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-input-default-border); color: var(--wb-semanticColor-input-default-foreground); border-width: var(--wb-border-width-medium); direction: ltr; padding: 0.4rem; text-align: left;"
            tabindex="0"
            type="text"
            value="1252"
          />
          <span
            id="aria-for-:r6:"
            style="display: none;"
          />
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`numeric-input widget Should render predictably: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            5008 \\div 4 =
          </span>
          <span />
        </span>
         
        <div
          class="perseus-widget-container widget-inline-block"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-label="Your answer:"
            aria-required="false"
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="perseus-input input-with-examples"
            data-style-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border);"
            data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
            data-style-focus-visible-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner);"
            data-style-placeholder="color: var(--wb-semanticColor-input-default-placeholder);"
            data-testid="input-with-examples"
            id=":r6:"
            style="width: 8rem; height: 3.2rem; border-radius: 0.3rem; box-sizing: border-box; padding-inline: var(--wb-c-form-field-layout-paddingInline); padding-block: var(--wb-c-form-field-layout-paddingBlock); margin: 0px; display: inline-block; font-family: Symbola, "Times New Roman", serif; font-size: 1.8rem; font-weight: var(--wb-font-weight-medium); line-height: 1.8rem; background: var(--wb-semanticColor-input-default-background); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-input-default-border); color: var(--wb-semanticColor-input-default-foreground); border-width: var(--wb-border-width-thin); direction: ltr; padding: 0.4rem 0.5rem; text-align: left;"
            tabindex="0"
            type="text"
            value=""
          />
          <span
            id="aria-for-:r6:"
            style="display: none;"
          />
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`numeric-input widget Should render tooltip as list when multiple format options are given: render with format list tooltip 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            5008 \\div 4 =
          </span>
          <span />
        </span>
         
        <div
          class="perseus-widget-container widget-inline-block"
        >
          <input
            aria-describedby="aria-for-:ri:"
            aria-disabled="false"
            aria-invalid="false"
            aria-label="Your answer:"
            aria-required="false"
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="perseus-input input-with-examples"
            data-style-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border);"
            data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
            data-style-focus-visible-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner);"
            data-style-placeholder="color: var(--wb-semanticColor-input-default-placeholder);"
            data-testid="input-with-examples"
            id=":ri:"
            style="width: 8rem; height: 3.2rem; border-radius: 0.3rem; box-sizing: border-box; padding-inline: var(--wb-c-form-field-layout-paddingInline); padding-block: var(--wb-c-form-field-layout-paddingBlock); margin: 0px; display: inline-block; font-family: Symbola, "Times New Roman", serif; font-size: 1.8rem; font-weight: var(--wb-font-weight-medium); line-height: 1.8rem; background: var(--wb-semanticColor-input-default-background); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-input-default-border); color: var(--wb-semanticColor-input-default-foreground); border-width: var(--wb-border-width-thin); direction: ltr; padding: 0.4rem 0.5rem; text-align: left;"
            tabindex="0"
            type="text"
            value=""
          />
          <span
            id="aria-for-:ri:"
            style="display: none;"
          >
            Your answer can be 
                   a simplified proper fraction (like 1/2 or 3/4), or
a simplified improper fraction (like 5/4 or 9/8), or
a mixed number (like 1 and 3/4 or 2 and 5/6)
          </span>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`numeric-input widget Should render tooltip using only correct answer formats: render tooltip only with correct answers 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            5008 \\div 4 =
          </span>
          <span />
        </span>
         
        <div
          class="perseus-widget-container widget-inline-block"
        >
          <input
            aria-describedby="aria-for-:rl:"
            aria-disabled="false"
            aria-invalid="false"
            aria-label="What's the answer?"
            aria-required="false"
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="perseus-input input-with-examples"
            data-style-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border);"
            data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
            data-style-focus-visible-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner);"
            data-style-placeholder="color: var(--wb-semanticColor-input-default-placeholder);"
            data-testid="input-with-examples"
            id=":rl:"
            style="width: 8rem; height: 3.2rem; border-radius: 0.3rem; box-sizing: border-box; padding-inline: var(--wb-c-form-field-layout-paddingInline); padding-block: var(--wb-c-form-field-layout-paddingBlock); margin: 0px; display: inline-block; font-family: Symbola, "Times New Roman", serif; font-size: 1.8rem; font-weight: var(--wb-font-weight-medium); line-height: 1.8rem; background: var(--wb-semanticColor-input-default-background); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-input-default-border); color: var(--wb-semanticColor-input-default-foreground); border-width: var(--wb-border-width-thin); direction: ltr; padding: 0.4rem 0.5rem; text-align: left;"
            tabindex="0"
            type="text"
            value=""
          />
          <span
            id="aria-for-:rl:"
            style="display: none;"
          >
            Your answer should be 
                   a simplified proper fraction (like 1/2 or 3/4)
          </span>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`numeric-input widget Should render tooltip when format option is given: render with format tooltip 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            5008 \\div 4 =
          </span>
          <span />
        </span>
         
        <div
          class="perseus-widget-container widget-inline-block"
        >
          <input
            aria-describedby="aria-for-:rc:"
            aria-disabled="false"
            aria-invalid="false"
            aria-label="Your answer:"
            aria-required="false"
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="perseus-input input-with-examples"
            data-style-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border);"
            data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
            data-style-focus-visible-active-not-aria-disabled-true-not-readonly="box-shadow: 0 0 0 var(--wb-c-form-field-border-width-press) var(--wb-semanticColor-input-default-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner);"
            data-style-placeholder="color: var(--wb-semanticColor-input-default-placeholder);"
            data-testid="input-with-examples"
            id=":rc:"
            style="width: 8rem; height: 3.2rem; border-radius: 0.3rem; box-sizing: border-box; padding-inline: var(--wb-c-form-field-layout-paddingInline); padding-block: var(--wb-c-form-field-layout-paddingBlock); margin: 0px; display: inline-block; font-family: Symbola, "Times New Roman", serif; font-size: 1.8rem; font-weight: var(--wb-font-weight-medium); line-height: 1.8rem; background: var(--wb-semanticColor-input-default-background); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-input-default-border); color: var(--wb-semanticColor-input-default-foreground); border-width: var(--wb-border-width-thin); direction: ltr; padding: 0.4rem 0.5rem; text-align: left;"
            tabindex="0"
            type="text"
            value=""
          />
          <span
            id="aria-for-:rc:"
            style="display: none;"
          >
            Your answer should be 
                   a simplified proper fraction (like 1/2 or 3/4)
          </span>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;
